@@ -593,6 +593,7 @@ Adds support for
 \f(CWconstexpr\fP,
 \f(CW[[deprecated]]\fP,
 \f(CWfalse\fP,
+fixed-type enumerations,
 \f(CW[[maybe_unused]]\fP,
 \f(CW[[nodiscard]]\fP,
 \f(CW[[reproducible]]\fP,
