@@ -1,4 +1,4 @@
-EXPECTED_EXIT=65
+EXPECTED_EXIT=0
 cdecl <<END
 explain enum E : int x
 END
