@@ -1,0 +1,4 @@
+EXPECTED_EXIT=65
+cdecl -xc17 <<END
+explain enum E : int x
+END
